--- a/_includes/donations.html
+++ b/_includes/donations.html
@@ -4,22 +4,22 @@
 	  <div class="row">
 		<div class="col-lg-12 text-center">
 		  <h2 class="section-heading text-uppercase">DONATIONS</h2>
-		  <h3 class="section-subheading text-muted">Support the cause</h3>
+		  <h3 class="section-subheading text-muted">Thank you for your support</h3>
 		</div>
 	  </div>
-	  <div class="row d-flex justify-content-center">
-        <div class="col-4 col-12-mobilep" style="text-align:center;">
+	  <div class="row">
+        <div class="col-md-4 col-sm-6" style="text-align:center;">
             <h3>PayPal</h3>
             <img style="width:60%;" src="assets/img/donations/qrcode.png">
             <p><a href="https://paypal.me/digitaledsafety/5?country.x=US&amp;locale.x=en_US">Donate on PayPal.me</a></p>
             </div>
-            <div class="col-4 col-12-mobilep" style="text-align:center;">
+            <div class="col-md-4 col-sm-6" style="text-align:center;">
             <h3>Coinbase Wallet</h3>
             <img style="padding:1.2em;width:60%;" src="assets/img/donations/qr-nft.png">
             <h6>Ethereum Mainnet (Crypto and NFT support)</h6>
             <p>0xaa6cB57fF6faf36d35dE134b37ABB96c7684063C</p>
             </div>
-            <div class="col-4 col-12-mobilep" style="text-align:center;">
+            <div class="col-md-4 col-sm-6" style="text-align:center;">
             <h3>Coinbase</h3>
             <img style="padding: 1.2em;" src="assets/img/donations/download%20(1).png">
             <h4>Bitcoin</h4>
