--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -18,12 +18,14 @@ header.masthead {
         @include serif-font;
       }
       .intro-heading {
-        font-size: 50px;
+        font-size: 35px;
         font-weight: 700;
-        line-height: 50px;
         margin-bottom: 25px;
         @include heading-font;
       }
+      .intro-heading p {
+        line-height: 1em;
+      }      
     }
   }
   @media (min-width: 768px) {
@@ -41,9 +43,11 @@ header.masthead {
         .intro-heading {
           font-size: 55px;
           font-weight: 700;
-          line-height: 15px;
           margin-bottom: 50px;
           @include heading-font;
+        }
+        .intro-heading p {
+          line-height: 1em;
         }
       }
     }
