--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.4-rc.1/web3.min.js"></script>
 
+
+    <!-- Custom scripts for web 3 -->
+    <script src="assets/js/dapp.js"></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="{{ site.description }}">
