--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -26,7 +26,7 @@
             {%- endif -%}
           </li>
         {% endfor %}
-        <li class="nav-item nav-link"><input class="btn btn-primary text-uppercase" type="button" value="Connect Wallet" onclick="connect();" /></li>
+        <li class="nav-item nav-link"><input id="connect-wallet" class="btn btn-primary text-uppercase" type="button" value="Connect Wallet" onclick="DApp.connect();" /></li>
         {% else %}
         {% for link in site.data.navigation.nav %}
         <li class="nav-item">
@@ -39,7 +39,7 @@
           {%- endif -%}
         </li>
         {% endfor %}
-        <li class="nav-item nav-link"><input class="btn btn-primary text-uppercase" type="button" value="Connect Wallet" onclick="connect();" /></li>
+        <li class="nav-item nav-link"><input id="connect-wallet" class="btn btn-primary text-uppercase" type="button" value="Connect Wallet" onclick="DApp.connect();" /></li>
         {% endif %}
         </ul>
       </div>
