--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,12 +45,11 @@
     <style> 
     .tooltiptext {
       visibility: hidden;
-      width: 120px;
       background-color: #343a40;
       color: #fff;
       font-size:x-small;
       border-radius: 5px;
-      padding: 5px;
+      padding: 0.2rem;
     
       /* Position the tooltip */
       position: absolute;
