--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,12 +14,6 @@
     <!-- End Google Analytics -->
     {% endif %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.4-rc.1/web3.min.js"></script>
-
-
-    <!-- Custom scripts for web 3 -->
-    <script src="assets/js/dapp.js"></script>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="{{ site.description }}">
@@ -58,6 +52,10 @@
     
     #tooltipeth:hover + .tooltiptext {
       visibility: visible;
+    }
+
+    #navbarDropdown img {
+      height: 30px;
     }
     </style>
     <!-- Page container change top padding when nav shrinks -->
