--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 
 	  {% include footer.html %}
 
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.4-rc.1/web3.min.js"></script>
+
 	  <!-- Bootstrap core JavaScript -->
 	  <script src="assets/js/jquery.min.js"></script>
 	  <script src="assets/js/bootstrap.bundle.min.js"></script>
@@ -23,6 +25,12 @@
 	  <!-- Custom scripts for this template -->
 	  <script src="assets/js/agency.min.js"></script>
 
+      <!-- Custom scripts for web 3 -->
+      <script src="assets/js/dapp.js"></script>
+
+      <!-- Custom scripts for auth -->
+      <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+      <script src="assets/js/app.js"></script>	  
 
   </body>
 </html>
