Pushing changes for store.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,7 +59,7 @@
     }
     </style>
     <!-- Page container change top padding when nav shrinks -->
-    {% if page.layout == "page" %}
+    {% if page.layout == "page" or page.layout == "store" %}
     <style>
       #pagecontainer {
         padding-top: 150px;
