--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,16 @@
       {% if site.locale and site.locale != "" and site.locale != nil %}
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright"
-            >Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span
-          >
+          <ul class="list-unstyled quicklinks">
+            <li>
+              <p
+                >Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</p
+              >
+            </li>
+            <li>
+              <p class="ein">EIN: {{ site.ein }}</p>
+            </li>
+          </ul>
         </div>
         <!-- Social Media -->
         <div class="col-md-4">
@@ -24,10 +31,7 @@
         </div>
         <!-- Legal -->
         <div class="col-md-4">
-          <ul class="list-inline quicklinks">
-            <li class="list-inline-item">
-                <p class="ein">EIN: {{ site.ein }}</p>
-            </li>            
+          <ul class="list-inline quicklinks">          
             <li class="list-inline-item">
               <a href="legal"
                 >{{ site.data.sitetext[site.locale].footer.legal | default:
@@ -35,11 +39,17 @@
               >
             </li>
             <li class="list-inline-item">
+              <a href="terms"
+                >{{ site.data.sitetext.footer.terms | default:
+                "Terms" }}</a
+              >
+            </li>             
+            <li class="list-inline-item">
                 <a href="financials"
                   >{{ site.data.sitetext[site.locale].footer.financials | default:
                   "Financials" }}</a
                 >
-            </li>            
+            </li>                        
           </ul>
         </div>
       </div>
@@ -73,6 +83,18 @@
                 "Privacy Policy" }}</a
               >
             </li>
+            <li class="list-inline-item">
+              <a href="terms"
+                >{{ site.data.sitetext.footer.terms | default:
+                "Terms" }}</a
+              >
+            </li>              
+            <li class="list-inline-item">
+              <a href="financials"
+                >{{ site.data.sitetext[site.locale].footer.financials | default:
+                "Financials" }}</a
+              >
+            </li>                       
           </ul>
         </div>
       </div>
