--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,17 +12,17 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.4-rc.1/web3.min.js"></script>
 
 	  <!-- Bootstrap core JavaScript -->
-	  <script src="assets/js/jquery.min.js"></script>
-	  <script src="assets/js/bootstrap.bundle.min.js"></script>
+	  <script src="/assets/js/jquery.min.js"></script>
+	  <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
 	  <!-- Plugin JavaScript -->
-	  <script src="assets/js/jquery.easing.min.js"></script>
+	  <script src="/assets/js/jquery.easing.min.js"></script>
 
 	  <!-- Contact form JavaScript -->
-	  <script src="assets/js/jqBootstrapValidation.js"></script>
-	  <script src="assets/js/contact_me.js"></script>
+	  <script src="/assets/js/jqBootstrapValidation.js"></script>
+	  <script src="/assets/js/contact_me.js"></script>
 
 	  <!-- Custom scripts for this template -->
-	  <script src="assets/js/agency.min.js"></script> 
+	  <script src="/assets/js/agency.min.js"></script> 
   </body>
 </html>
