--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,6 +3,9 @@ layout: default
 ---
 {% include nav.html %}
 
+{% include mastheadpage.html %}
+
+
 {% if page.background == "grey" or page.background == "gray" %}
 <script>
 document.getElementById("page-top").className="bg-light";
