--- a/_includes/resource_grid.html
+++ b/_includes/resource_grid.html
@@ -1,6 +1,6 @@
 <!-- Portfolio Grid -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
-<section class="bg-light page-section" id="{{ site.data.sitetext.portfolio.section | default: "portfolio" }}">
+<section class="bg-light page-section" id="{{ site.data.sitetext.resources.section | default: "resources" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -28,7 +28,7 @@
   </div>
 </section>
 {% else %}
-<section class="bg-light page-section" id="{{ site.data.sitetext.resource.section | default: "resource" }}">
+<section class="bg-light page-section" id="{{ site.data.sitetext.resources.section | default: "resources" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
