--- a/_includes/program_grid.html
+++ b/_includes/program_grid.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="row">
-	{% for project in site.projects %}
+	{% for project in site.programs %}
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="{{ project.id }}">
           <div class="portfolio-hover">
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="row">
-	{% for project in site.portfolio %}
+	{% for project in site.programs %}
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="portfolio-hover">
