--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include navheader.html %}
 {% include services.html %}
-{% include portfolio_grid.html %}
+{% include program_grid.html %}
 {% include resource_grid.html %}
 {% include timeline.html %}
 {% include team.html %}
