--- a/_includes/resource_grid.html
+++ b/_includes/resource_grid.html
@@ -11,7 +11,7 @@
     <div class="row">
 	{% for resource in site.resources %}
       <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="{{ resource.id}}">
+        <a class="portfolio-link" href="{{ resource.id }}">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
               <i class="{{ site.data.style.portfolio-icon | default: "fas fa-plus fa-3x" }}"></i>
@@ -39,7 +39,7 @@
     <div class="row">
 	{% for resource in site.resources %}
       <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
+        <a class="portfolio-link" href="{{ resource.id }}">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
               <i class="{{ site.data.style.resource-icon | default: "fas fa-plus fa-3x" }}"></i>
