--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,3 +16,5 @@ document.getElementById("page-top").className="bg-light";
 <div class="container" id="pagecontainer">
   {{ content }}
 </div>
+
+{% include contact.html %}
