--- a/_includes/program_grid.html
+++ b/_includes/program_grid.html
@@ -11,7 +11,7 @@
     <div class="row">
 	{% for project in site.programs %}
       <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="{{ project.id }}">
+        <a class="portfolio-link" href="{{ project.id }}">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
               <i class="{{ site.data.style.portfolio-icon | default: "fas fa-plus fa-3x" }}"></i>
@@ -40,7 +40,7 @@
     <div class="row">
 	{% for project in site.programs %}
       <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
+        <a class="portfolio-link" href="{{ project.id }}">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
               <i class="{{ site.data.style.portfolio-icon | default: "fas fa-plus fa-3x" }}"></i>
