--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,7 +13,7 @@ document.getElementById("page-top").className="bg-light";
 {% endif %}
 
 
-<div class="container" id="pagecontainer">
+<div class="container py-4" id="pagecontainer">
   {{ content }}
 </div>
 
