--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 {% include navheader.html %}
 {% include services.html %}
 {% include program_grid.html %}
-{% include resource_grid.html %}
+{% include category_grid.html %}
 {% include timeline.html %}
 {% include team.html %}
 {% include donations.html %}
