--- a/_includes/resources_grid.html
+++ b/_includes/resources_grid.html
@@ -6,9 +6,9 @@
   <div class="row">
       <!-- Filters -->
       <div class="col-md-3">
-          <h3>Filters</h3>
+          <div style="text-decoration: underline;"><span><i class="fa fa-filter"></i>&nbsp;Filter by: </span></div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="all">
+            <input type="checkbox" checked class="form-check-input" id="all">
             <label class="form-check-label" for="stem">All</label>
           </div>
           <div class="form-check">
