--- a/_includes/category_grid.html
+++ b/_includes/category_grid.html
@@ -1,10 +1,11 @@
 <!-- resources Grid -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
+
 <section class="bg-light page-section" id="{{ site.data.sitetext.resources.section | default: "resources" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].resource.title | markdownify | default: "Resources" }}</h2>
+        <h2 class="section-heading text-uppercase">Learning Resources</h2>
         <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].resource.text | markdownify }}</h3>
       </div>
     </div>
