--- a/_includes/resources_grid.html
+++ b/_includes/resources_grid.html
@@ -1,16 +1,18 @@
 {% assign filter = page.title | downcase %}
 {% assign posts = site.resources | where_exp: "resource", "resource.categories contains filter" %}
 
-
+<script>
+    // Example array of JavaScript objects representing card
+    const cardData = {{ posts | jsonify }};
+  </script>
 
   <div class="row">
       <!-- Filters -->
       <div class="col-md-3">
           <div style="text-decoration: underline;"><span><i class="fa fa-filter"></i>&nbsp;Filter by: </span></div>
-          <div class="form-check">
-            <input type="checkbox" checked class="form-check-input" id="all">
-            <label class="form-check-label" for="stem">All</label>
-          </div>
+          <div id="card-filters">
+
+            </div>
           <!-- Add more filters as needed -->
       </div>
       <!-- List of Cards -->
@@ -21,20 +23,36 @@
       </div>
   </div>
 
-
 <!-- Add Bootstrap JS and jQuery for checkbox filtering -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
-  // Example array of JavaScript objects representing card
-
-  const cardData = {{ posts | jsonify }};
-
   // Function to populate cards
   function populateCards() {
-      const cardContainer = document.getElementById('card-container');
-      cardContainer.innerHTML = '';
+    const cardFiltersContainer = document.getElementById('card-filters');
+    cardFiltersContainer.innerHTML = '';
+    const fs = [];
+      cardData.forEach(cardObj => {
+        cardObj.tags.forEach(cardTag => {
+            if(!fs.includes(cardTag)) {
+                fs.push(cardTag);
+            }
+        })
+      });
 
+      fs.forEach(f => {
+        const isChecked = (f == 'all' ? 'checked' : '');
+        const filterHtml = `
+        <div class="form-check">
+            <input type="checkbox" ${isChecked} class="form-check-input" id="${f}">
+            <label class="form-check-label" for="stem">${f}</label>
+        </div>
+          `;
+          cardFiltersContainer.innerHTML += filterHtml;
+      });
+
+    const cardContainer = document.getElementById('card-container');
+      cardContainer.innerHTML = '';
       cardData.forEach(cardObj => {
           const cardHtml = `
               <div class="col-md-4 mb-3 filterable-card" data-filters="${cardObj.tags.join(' ')}">
@@ -70,9 +88,11 @@
   }
 
   // Initialize filtering on page load and when checkboxes change
-  $(document).ready(function () {
-      $('input[type="checkbox"]').change(filterCards);
+  $(document).ready(function () {   
       populateCards();
+
+      $('input[type="checkbox"]').change(filterCards);      
+
       filterCards();
   });
 </script>
