--- a/_includes/category_grid.html
+++ b/_includes/category_grid.html
@@ -1,26 +1,26 @@
 <!-- resources Grid -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
 
-<section class="bg-light page-section" id="{{ site.data.sitetext.resources.section | default: "resources" }}">
+<section class="bg-light page-section" id="{{ site.data.sitetext.resources.section | default: "portfolio" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Learning Resources</h2>
-        <h3 class="section-subheading text-muted">A curated collection of STEM Learning Resources</h3>
+        <h3 class="section-subheading text-muted">A curated collection of STEM/STEAM Learning Resources</h3>
       </div>
     </div>
     <div class="row">
 	{% for resource in site.categories %}
-      <div class="col-md-4 col-sm-6 resources-item">
-        <a class="resources-link" href="{{ resource.id }}">
-          <div class="resources-hover">
-            <div class="resources-hover-content">
-              <i class="{{ site.data.style.resources-icon | default: "fas fa-plus fa-3x" }}"></i>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" href="{{ resource.id }}">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="{{ site.data.style.portfolio-icon | default: "fas fa-plus fa-3x" }}"></i>
             </div>
           </div>
           <img class="img-fluid" src="{{ resource.caption.thumbnail }}" alt="">
         </a>
-        <div class="resources-caption">
+        <div class="portfolio-caption">
           <h4>{{ resource.caption.title }}</h4>
         </div>
       </div>
@@ -29,7 +29,7 @@
   </div>
 </section>
 {% else %}
-<section class="bg-light page-section" id="{{ site.data.sitetext.resources.section | default: "resources" }}">
+<section class="bg-light page-section" id="{{ site.data.sitetext.portfolio.section | default: "portfolio" }}">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -39,16 +39,16 @@
     </div>
     <div class="row">
 	{% for resource in site.categories %}
-      <div class="col-md-4 col-sm-6 resources-item">
-        <a class="resources-link" href="{{ resource.id }}">
-          <div class="resources-hover">
-            <div class="resources-hover-content">
-              <i class="{{ site.data.style.resource-icon | default: "fas fa-plus fa-3x" }}"></i>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" href="{{ resource.id }}">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="{{ site.data.style.portfolio-icon | default: "fas fa-plus fa-3x" }}"></i>
             </div>
           </div>
           <img class="img-fluid" src="{{ resource.caption.thumbnail }}" alt="">
         </a>
-        <div class="resources-caption">
+        <div class="portfolio-caption">
           <h4>{{ resource.caption.subtitle }}</h4>
         </div>
       </div>
