--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,19 +33,19 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">          
             <li class="list-inline-item">
-              <a href="legal"
+              <a href="/legal"
                 >{{ site.data.sitetext[site.locale].footer.legal | default:
                 "Privacy Policy" }}</a
               >
             </li>
             <li class="list-inline-item">
-              <a href="terms"
+              <a href="/terms"
                 >{{ site.data.sitetext.footer.terms | default:
                 "Terms" }}</a
               >
             </li>             
             <li class="list-inline-item">
-                <a href="financials"
+                <a href="/financials"
                   >{{ site.data.sitetext[site.locale].footer.financials | default:
                   "Financials" }}</a
                 >
@@ -78,19 +78,19 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="legal"
+              <a href="/legal"
                 >{{ site.data.sitetext.footer.legal | default:
                 "Privacy Policy" }}</a
               >
             </li>
             <li class="list-inline-item">
-              <a href="terms"
+              <a href="/terms"
                 >{{ site.data.sitetext.footer.terms | default:
                 "Terms" }}</a
               >
             </li>              
             <li class="list-inline-item">
-              <a href="financials"
+              <a href="/financials"
                 >{{ site.data.sitetext[site.locale].footer.financials | default:
                 "Financials" }}</a
               >
