--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
   {% include head.html %}
 
   <body id="page-top">
+	  <div id="loading">
+		<span id="loading-image" />
+	  </div>
 
       {{ content }}
 
@@ -24,5 +27,11 @@
 
 	  <!-- Custom scripts for this template -->
 	  <script src="/assets/js/agency.min.js"></script> 
+
+	  <script>
+		window.addEventListener("load", (event) => {
+			document.getElementById("loading").style.display = "none";
+		});
+	  </script>
   </body>
 </html>
