--- a/_layouts/definition.html
+++ b/_layouts/definition.html
@@ -7,7 +7,9 @@ layout: default
   <div class="container">
     <div class="intro-text">
     <h1 class="intro-lead-in">{{ page.title }}</h1>
-    <h4>({{ page.abbreviations }})</h4>
+    {% if page.abbreviations %}
+    <h4>({{ page.abbreviations | join: ', ' }})</h4>
+    {% endif %}
     <div class="intro-heading text-uppercase">Definitions</div>
     <h4 style="text-shadow: 0.5px 0.5px 3px black;">{{ content }}</h4>
     </div>
