--- a/_layouts/definition.html
+++ b/_layouts/definition.html
@@ -21,3 +21,5 @@ layout: default
 document.getElementById("page-top").className="bg-light";
 </script>
 {% endif %}
+
+{% include glossaries_row.html %}
