--- a/_includes/glossaries_row.html
+++ b/_includes/glossaries_row.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row" >
         <div style="margin:auto; font-weight: bold; font-size: 1.4em;" class="col-lg-10 text-center text-white">
-            See our Glossaries for more definitions
+            <p class="mt-2 mb-2">See our Glossaries for more definitions</p>
         </div>
         <div class="col-lg-2 mb-3 mt-3 text-center">
             <a href="/glossaries" style="color: white; background-color: #ababab; border-color: #ffffff; width: 160px;" class="btn btn-outline-primary">View</a>
