--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -109,7 +109,7 @@ Open source communities also expose individuals to a diverse range of technologi
               const cardHtml = `
                   <div class="col-md-4 mb-3 filterable-card" data-filters="${cardObj.tags.join(',')}">
                       <div class="card">
-                        <img class="img-fluid" src=${cardObj.caption.thumbnail} alt="">
+                        <img class="card-img-top img-fluid" src=${cardObj.caption.thumbnail} alt="">
                           <div class="card-body">
                               <h5 class="card-title">${cardObj.title}</h5>
                               <p class="card-subtitle">${abbrev}</h>
