--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,6 +54,12 @@
       height: 30px;
     }
 
+    .card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+    }
+
     </style>
     <!-- Page container change top padding when nav shrinks -->
     {% if page.layout == "page" or page.layout == "store" %}
