--- a/_includes/resources_grid.html
+++ b/_includes/resources_grid.html
@@ -57,7 +57,7 @@
           const cardHtml = `
               <div class="col-md-4 mb-3 filterable-card" data-filters="${cardObj.tags.join(',')}">
                   <div class="card">
-                    <img class="img-fluid" src=${cardObj.caption.thumbnail} alt="">
+                    <img class="card-img-top img-fluid" src=${cardObj.caption.thumbnail} alt="">
                       <div class="card-body">
                           <h5 class="card-title">${cardObj.title}</h5>
                           <p class="card-text">${cardObj.subtitle}</p>
