--- a/_layouts/glossary.html
+++ b/_layouts/glossary.html
@@ -100,7 +100,7 @@ document.getElementById("page-top").className="bg-light";
 
                           <div class="card-body">
                               <h5 class="card-title">${cardObj.title}</h5>
-                              <p class="card-subtitle">${abbrev}</h>
+                              <p class="card-subtitle">${abbrev}</p>
                               <p class="card-text">${cardObj.description}</p>
                               <a href=${cardObj.path} class="btn btn-primary stretched-link">View</a>
                           </div>
