--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -112,7 +112,7 @@ Open source communities also expose individuals to a diverse range of technologi
                         <img class="card-img-top img-fluid" src=${cardObj.caption.thumbnail} alt="">
                           <div class="card-body">
                               <h5 class="card-title">${cardObj.title}</h5>
-                              <p class="card-subtitle">${abbrev}</h>
+                              <p class="card-subtitle">${cardObj.tags}</h>
                               <p class="card-text">${cardObj.description}</p>
                               <a href=${cardObj.homepage} class="btn btn-primary stretched-link">View</a>
                           </div>
