--- a/_includes/resources_grid.html
+++ b/_includes/resources_grid.html
@@ -61,7 +61,7 @@
                       <div class="card-body">
                           <h5 class="card-title">${cardObj.title}</h5>
                           <p class="card-text">${cardObj.subtitle}</p>
-                          <a href=${cardObj.link} target="_blank" class="btn btn-primary stretched-link">View</a>
+                          <a href=${cardObj.link} target="_blank" class="btn btn-primary stretched-link">Explore</a>
                       </div>
                   </div>
               </div>
