--- a/_layouts/glossary.html
+++ b/_layouts/glossary.html
@@ -102,7 +102,7 @@ document.getElementById("page-top").className="bg-light";
                               <h5 class="card-title">${cardObj.title}</h5>
                               <p class="card-subtitle">${abbrev}</p>
                               <p class="card-text">${cardObj.description}</p>
-                              <a href=${cardObj.path} class="btn btn-primary stretched-link">View</a>
+                              <a href=${cardObj.path} class="btn btn-primary stretched-link">Explore</a>
                           </div>
                       </div>
                   </div>
