--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -114,7 +114,7 @@ Open source communities also expose individuals to a diverse range of technologi
                               <h5 class="card-title">${cardObj.title}</h5>
                               <p class="card-subtitle">${cardObj.tags}</h>
                               <p class="card-text">${cardObj.description}</p>
-                              <a href=${cardObj.homepage} class="btn btn-primary stretched-link">View</a>
+                              <a href=${cardObj.homepage} class="btn btn-primary stretched-link">Explore</a>
                           </div>
                       </div>
                   </div>
