--- a/_includes/glossaries_row.html
+++ b/_includes/glossaries_row.html
@@ -5,7 +5,7 @@
             <p class="mt-2 mb-2">See our Glossaries for more definitions</p>
         </div>
         <div class="col-lg-2 mb-3 mt-3 text-center">
-            <a href="/glossaries" style="color: white; background-color: #ababab; border-color: #ffffff; width: 160px;" class="btn btn-outline-primary">View</a>
+            <a href="/glossaries" style="color: white; background-color: #ababab; border-color: #ffffff; width: 160px;" class="btn btn-outline-primary">Explore</a>
         </div>
     </div>
     </div>
