--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -48,7 +48,7 @@ Open source communities also expose individuals to a diverse range of technologi
             "title": {{card.title | jsonify}}, 
             "tags": {{card.tags | jsonify}}, 
             "path": {{card.id | jsonify}},
-            "homepage": {{card.homepage | jsonify}}, 
+            "contribute": {{card.contribute | jsonify}}, 
             "caption": {{card.caption | jsonify}}, 
             "abbreviations": {{card.abbreviations | jsonify}}, 
             "description": {{card.excerpt | jsonify}}
@@ -114,7 +114,7 @@ Open source communities also expose individuals to a diverse range of technologi
                               <h5 class="card-title">${cardObj.title}</h5>
                               <p class="card-subtitle">${cardObj.tags}</h>
                               <p class="card-text">${cardObj.description}</p>
-                              <a href=${cardObj.homepage} class="btn btn-primary stretched-link">Explore</a>
+                              <a href=${cardObj.contribute} class="btn btn-primary stretched-link">Contribute</a>
                           </div>
                       </div>
                   </div>
