--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -33,7 +33,7 @@ document.getElementById("page-top").className="bg-light";
 
     <p>
 
-        Participation in open source projects encourages problem-solving and critical thinking. Contributors often encounter challenges that require creative solutions, honing their analytical skills and ability to troubleshoot issues. The collaborative nature of these projects promotes teamwork, communication, and project management skills, which are crucial in STEM fields where collaboration is common.
+        Open source projects encourage problem-solving and critical thinking. Contributors often encounter challenges that require creative solutions, honing their analytical skills and ability to troubleshoot issues. The collaborative nature of these projects promotes teamwork, communication, and project management skills, which are crucial in STEM fields where collaboration is common.
 </p>
 <p>
 Open source communities also expose individuals to a diverse range of technologies and tools. Contributors may work on projects related to data science, artificial intelligence, cybersecurity, or any other STEM discipline, providing exposure to a broad spectrum of applications. This exposure not only helps individuals discover their interests within STEM but also prepares them for the interdisciplinary nature of many STEM careers.
