--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -59,7 +59,7 @@ Open source communities also expose individuals to a diverse range of technologi
     
       <div class="row">
           <!-- Filters -->
-          <div class="col-md-3">
+          <div class="col-md-2">
               <div style="text-decoration: underline;"><span><i class="fa fa-filter"></i>&nbsp;Filter by: </span></div>
               <div id="card-filters">
     
@@ -67,7 +67,7 @@ Open source communities also expose individuals to a diverse range of technologi
               <!-- Add more filters as needed -->
           </div>
           <!-- List of Cards -->
-          <div class="col-md-9">
+          <div class="col-md-10">
               <div class="row" id="card-container">
                   <!-- Cards will be dynamically populated here -->
               </div>
@@ -94,7 +94,7 @@ Open source communities also expose individuals to a diverse range of technologi
           fs.forEach(f => {
             const isChecked = (f == 'Apple' ? 'checked' : '');
             const filterHtml = `
-            <div class="form-check">
+            <div class="form-check form-check-inline">
                 <input type="checkbox" ${isChecked} class="form-check-input" id="${f}">
                 <label class="form-check-label" for="stem">${f}</label>
             </div>
