--- a/_layouts/glossary.html
+++ b/_layouts/glossary.html
@@ -10,7 +10,7 @@ layout: default
 <header class="masthead" style="background-image: url('/assets/img/glossaries/mast.jpg')">
     <div class="container">
       <div class="intro-text">
-      <div class="intro-lead-in">Glossaries</div>
+      <div class="intro-heading">Glossaries</div>
       </div>
     </div>
   </header>
@@ -26,9 +26,11 @@ document.getElementById("page-top").className="bg-light";
 
 <div class="container py-5" id="pagecontainer">
 
-    <h1>Glossaries</h1>
+    <h2>Speak the language</h2>
 
-    <p>Glossaries (or cheatsheets) are an effective method for studying new STEM/STEAM technology concepts. View our collection below.</p>
+    <p>
+        Glossaries (or cheatsheets) are an effective method for studying new STEM/STEAM technologies. The technology industry is characterized by unique jargon, technical terms, and specialized language that serve as a common platform among professionals. These specialized vocabularies not only facilitate effective communication but also play a crucial role in understanding the intricacies of processes, and other concepts within the industry.
+    </p>
 
     <script>
         // Example array of JavaScript objects representing card
