--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -10,7 +10,7 @@ layout: default
 <header class="masthead" style="background-image: url('/assets/img/opensource/mast.jpg')">
     <div class="container">
       <div class="intro-text">
-      <h1 class="intro-lead-in">Open Source</h1>
+      <h1 class="intro-heading">Open Source</h1>
       </div>
     </div>
   </header>
