--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -40,6 +40,10 @@ Open source communities also expose individuals to a diverse range of technologi
 
     </p>
 
+    <p>
+We've compiled a list of popular open source projects in industry below. The Contribute button will redirect you to a contribution page with best practices on how to get started!
+        </p>
+
     <script>
         // Example array of JavaScript objects representing card
         const cardData = 
