--- a/_layouts/open-source.html
+++ b/_layouts/open-source.html
@@ -26,6 +26,7 @@ document.getElementById("page-top").className="bg-light";
 
 <div class="container py-5" id="pagecontainer">
 
+    <h2>Code collaboration with industry</h2>
 
 <p>
     Open source projects provide an invaluable platform for individuals to develop and enhance their STEM skills. Participation in open source initiatives offers a practical and collaborative learning environment where enthusiasts can contribute to real-world projects. One of the key aspects is the transparency of the source code, allowing aspiring developers to explore and understand how complex systems function. This hands-on experience fosters a deeper comprehension of programming languages, algorithms, and software architecture.
