--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -26,7 +26,7 @@
           "type": "image/png"
         }
       ],
-      "start_url": "./",
+      "start_url": "./{{page.url}}",
       "display": "standalone",
       "theme_color": "{{'#000000' | url_encode}}",
       "background_color": "{{'#ffffff' | url_encode}}" 
