--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
       gtag("js", new Date());
   
       gtag("config", "{{ site.analytics.google }}");
+      gtag("config", "AW-16943605271");
     </script>
     <!-- End Google Analytics -->
     {% endif %}
